<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@android:color/black">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto"
            android:hint="@string/names"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:textStyle="normal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lastname_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@android:color/black">

        <EditText
            android:id="@+id/lastname_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto"
            android:hint="@string/hint_lastnames"
            android:inputType="text"
            android:textSize="20sp"
            android:textStyle="normal" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/birthday_textview_detail"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/birthday"/>


        <TextView
            android:id="@+id/id_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto"
            android:hint="@string/id"
            android:textColor="@android:color/black"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            android:textStyle="normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/is_in_treatment"/>
    <CheckBox
        android:id="@+id/checkBox_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/yes" />
    <CheckBox
        android:id="@+id/checkBox_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/no" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/modering_fee_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@android:color/black"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/modering_fee_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto"
            android:hint="@string/modering_fee"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            android:textStyle="normal" />
    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:fontFamily="Roboto"
        android:text="@string/change_data"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_launch_new_medical_appointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="Roboto"
        android:text="@string/create_new_appointment"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="Roboto"
        android:text="@string/delete_patient"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/watch_medical_appointments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="Roboto"
        android:text="@string/watch_medical_appointments"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>