<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="50dp"
    android:id="@+id/container_item_history"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/date_of_appointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/date_of_appointmen"/>
    <TextView

        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:text="@string/attended"/>
    <TextView
        android:id="@+id/attended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/attended_state"/>
</LinearLayout>