<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/code_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@android:color/black">

        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto"
            android:hint="@string/code"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:textStyle="normal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/especialty_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@android:color/black">

        <EditText
            android:id="@+id/especialty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto"
            android:hint="@string/hint_specialty"
            android:inputType="text"
            android:textSize="20sp"
            android:textStyle="normal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/years_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@android:color/black"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/years"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto"
            android:hint="@string/hint_years_of_experience"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            android:textStyle="normal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/consulting_room_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@android:color/black"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/consulting_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto"
            android:hint="@string/hint_consulting_room"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            android:textStyle="normal" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/is_in_home"/>
    <CheckBox
        android:id="@+id/checkBox_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/yes" />
    <CheckBox
        android:id="@+id/checkBox_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/no" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:fontFamily="Roboto"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/register"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>