<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@android:color/black">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto"
            android:hint="@string/names"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:textStyle="normal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lastname_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@android:color/black">

        <EditText
            android:id="@+id/lastname_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto"
            android:hint="@string/hint_lastnames"
            android:inputType="text"
            android:textSize="20sp"
            android:textStyle="normal" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/birthday_textview"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/birthday"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/years_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@android:color/black"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/years_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto"
            android:hint="@string/hint_years_of_experience"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            android:textStyle="normal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/consulting_room_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@android:color/black"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto"
            android:hint="@string/id"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            android:textStyle="normal" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_assigned_doctor"
        android:layout_width="match_parent"
        android:layout_height="60dp"></Spinner>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/is_in_treatment"/>
    <CheckBox
        android:id="@+id/checkBox_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/yes" />
    <CheckBox
        android:id="@+id/checkBox_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/no" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/modering_fee_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@android:color/black"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/modering_fee_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="Roboto"
            android:hint="@string/modering_fee"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            android:textStyle="normal" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/date_and_time_new_appointment"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/date_of_new_appoinment"
            android:text="date_of_new_appoinment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginHorizontal="20dp"
            android:id="@+id/time_of_new_appoinment"
            android:text="time_of_new_appoinment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:fontFamily="Roboto"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/register"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>